--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.PlayCard-container {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  width: auto;
+  flex: auto
+}
