Added monologues pages. Updated routes. Created authentication check. Embedded google calendar to home page

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ code {
   width: 17em;
   flex: auto
 }
+
+.MonologueCard-container {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  width: 17em;
+  flex: auto
+}
